css/index_style.css
body {
  background-image: url(pics/abstract.png);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

body, html {
  margin: 0;
  padding: 0;
  height: 90%;
}

.header {
 /*background-image: url(pics/abstract.png);*/
}

.header h1 {
  text-align: center;
  color: white;
  font-family: sans-serif;
}

.menu_bar {
  list-style-type: none;
  margin-left: 100px;
  margin-right: 100px;
  padding: 15px;
  background-color: white;
  border-radius: 10px;
  overflow: hidden;
  position: sticky;
}

/*
.menu_bar li {
  display: inline;
}

*/
li {
  float: left;
}

li a {
  display: block;
  color: black;
  text-align: center;
  padding: 5px 10px;
  text-decoration: none;
  font-size: 20px;
  font-style: oblique;
}

/*
.top_pad li a:hover {
  background-color: gray;
}
*/
li a:hover {
  background-color: lightgray;
}

.intro {
  font-style: italic;
  background-color: white;
  margin-left: 100px;
  margin-right: 100px;
  border-radius: 8px;
  padding-left: 10px;
  padding-right: 10px;
}

p img {
  width: 180px;
  height: 200px;
  padding: 20px
}

h1 {
  font-family: sans-serif;
  padding-top: 5px;
}

.footer {
  font-style: arial;
  background-color: white;
  margin-left: 100px;
  margin-right: 100px;
  border-radius: 8px;
  padding-left: 10px;
  padding-right: 10px;
  padding-top:5px;
  padding-bottom: 5px;
  overflow: hidden;
  bottom: 0;
  right: 0;
  position: fixed;
}

.footer h3 {
  text-decoration-line: underline;
}

.footer ul {
  list-style-type: none;
}

.footer li {
  font-size: 15px;
  padding-left: 0px;
  padding-right: 10px;
}

li img {
  width: 20px;
  height: 20px;
  padding-left: 10px;
  padding-right: 10px;
}

